# IceNET.Platform

./: 0_DEVEL.h  CURRENT_TODO.h  README.md  build  clean  feature.h  kill.jtag  server.json  sftp-config.json  size.py
BBB.Firmware/: Makefile  README  driver.c
BBB.Pin/: bbb.config
K64F.Firmware/: Makefile  analyser.d  analyser.elf  output.map
Quartus/: DeBounce.vhd  DeBounce.vhd.bak  NetworkAnalyser.qpf  NetworkAnalyser.qsf  NetworkAnalyser.qws  NetworkAnalyser.vhd  NiosFirmware.cmp  NiosFirmware.html  NiosFirmware.sopcinfo  NiosFirmware_generation_1.rpt  debounce.vhd  debounce.vhd.bak  debug.stp  debug_auto_stripped.stp  licznik.vhd  spi.vhd  spi.vhd.bak  spi_debug.stp  spi_debug_auto_stripped.stp
Quartus.deps/: install
architecture/: IceNET.Platform  iceNET
boot/: uEnv.txt  uEnv.txt.flash  xsdb
debug/: Debug.vhd  IRQ_CONTROLLER.vhd  IRQ_CONTROLLER.vhd.bak  IrqController.vhd  PulseController.vhd  SpiConverter.vhd  TimedReset.vhd  UartDataAssembly.vhd  UartDataTransfer.vhd  UartOffloadController.vhd  UartProcess.vhd  UartRx.vhd  UartRx.vhd.bak  UartTx.vhd  UartTypes.vhd
firmware/: Makefile  uart.c
firmware/app/: CMakeLists.txt  Makefile  app  app.pro  build_app  main.cpp  moc_gui.cpp  moc_worker.cpp
firmware/app/class/Register/: Register.cpp
firmware/app/gui/: CameraWindow.cpp  CameraWindow.h  CsiCamera.cpp  UsbCamera.cpp  UsbCamera.h  gui.cpp  gui.h
firmware/app/include/: Commander.h  Compute.h  Config.h  Console.h  Core.h  DroneCtrl.h  KernelComms.h  KernelInput.h  KernelOutput.h  Kernel_IN.h  Kernel_OUT.h  Network.h  NetworkTraffic.h  RamConfig.h  Register.h  ServerTCP.h  Types.h  Watchdog.h  compute.h  console.h  core.h  debug.h  iceCOM.h  iceNET.h  iceSM.h  inputCOM.h  linkCOM.h  outputCOM.h  serverTCP.h  stateMachine.h  tcpServer.h  types.h
firmware/app/include/BlockDevice/: RamConfig.h
firmware/app/include/CharDevice/: Commander.h  Input.h  Output.h  Watchdog.h
firmware/app/include/KernelComms/: KernelComms.h
firmware/app/include/KernelComms/BlockDevice/: RamDisk.h
firmware/app/include/KernelComms/CharDevice/: Commander.h  Watchdog.h
firmware/app/include/Network/: Network.h  NetworkTraffic.h  ServerTCP.h
firmware/app/meas/: Measure.cpp  Measure.h  measList.cpp
firmware/app/src/: Comander.cpp  Compute.cpp  Config.cpp  Console.cpp  DroneCtrl.cpp  KernelComms.cpp  KernelInput.cpp  KernelOutput.cpp  Kernel_IN.cpp  Kernel_OUT.cpp  Network.cpp  NetworkTraffic.cpp  RamConfig.cpp  ServerTCP.cpp  Watchdog.cpp  compute.cpp  console.cpp  debug.cpp  iceCOM.cpp  iceNET.cpp  iceSM.cpp  inputCOM.cpp  linkCOM.cpp  main.cpp  outputCOM.cpp  serverTCP.cpp  stateMachine.cpp  tcpServer.cpp
firmware/app/src/BlockDevice/: RamConfig.cpp  RamDisk.cpp
firmware/app/src/CharDevice/: Commander.cpp  Input.cpp  Output.cpp  Watchdog.cpp
firmware/app/src/KernelComms/: KernelComms.cpp
firmware/app/src/KernelComms/BlockDevice/: RamDisk.cpp
firmware/app/src/KernelComms/CharDevice/: Commander.cpp  Watchdog.cpp
firmware/app/src/Network/: Network.cpp  NetworkTraffic.cpp  ServerTCP.cpp
firmware/app/system/include/: DroneCtrl.h  Types.h
firmware/app/system/include/KernelComms/: KernelComms.h
firmware/app/system/include/KernelComms/BlockDevice/: RamDisk.h
firmware/app/system/include/KernelComms/CharDevice/: Commander.h  Watchdog.h
firmware/app/system/include/Worker/: Worker.h
firmware/app/system/src/: DroneCtrl.cpp
firmware/app/system/src/KernelComms/: KernelComms.cpp
firmware/app/system/src/KernelComms/BlockDevice/: RamDisk.cpp
firmware/app/system/src/KernelComms/CharDevice/: Commander.cpp  Watchdog.cpp
firmware/app/system/src/Network/: ServerTCP.cpp
firmware/app/system/src/Worker/: Worker.cpp
firmware/app/worker/: worker.cpp
firmware/x86/app/: CMakeLists.txt  Makefile  main.cpp  run
firmware/x86/app/KernelCommander/: KernelCommander.cpp  KernelCommander.h
firmware/x86/app/KernelCtrl/: KernelCtrl.cpp  KernelCtrl.h
firmware/x86/app/MainGui/: MainGui.cpp  MainGui.h
firmware/x86/app/StreamReceiver/: StreamReceiver.cpp
firmware/x86/gui/: CMakeLists.txt  StreamReceiver.cpp  StreamReceiver.h  main.cpp  mainCtrl.cpp  mainCtrl.h  ninja_build  run
firmware/x86/gui/kernel/: KernelCtrl.cpp  KernelCtrl.h
fpga/: NetworkAnalyser.qsf  NetworkAnalyser.vhd  NiosFirmware.qsys  NiosFirmware_generation.rpt  aaa  debug.stp  debug_auto_stripped.stp  spi.stp  spi_debug.stp
freertos_dspi/: clock_config.c  pin_mux.c
gui/: a.out  app  gui.py  main.cpp  main.py  tcp.py  uart.py
hardware/: FrequencyDivider.vhd  FrequencyDivider.vhd.bak  NetworkAnalyser.qsf  NetworkAnalyser.qws  NetworkAnalyser.sdc  NetworkAnalyser.vhd  NetworkAnalyser.vhd.bak  NiosFirmware.bsf  NiosFirmware.sopcinfo  NiosFirmware_generation_2.rpt  SCLK_auto_stripped.stp  all.stp  debounce.vhd  debug.stp  debug_auto_stripped.stp  divider.stp  divider_auto_stripped.stp  spi.stp  spi_auto_stripped.stp  test_auto_stripped.stp
hybrid/: .Module.symvers.cmd  .iceNET.mod.cmd  .iceNET.mod.o.cmd  .iceNET.o.cmd  .modules.order.cmd  Makefile  iceNET.c  iceNET.mod  iceNET.mod.c  modules.order
other/: BB-SPIDEV1-00A0.dts  connman  net  net-reset  quartus_vsim  sensors.h  server.json  sftp-config.json  solarized.ocean  usb
qt/: Makefile  app  app.pro  main.cpp
rtl/: CanController.vhd  ClockGenerator.vhd  DEVICE_part..vhd  Debounce.vhd  Debounce.vhd.bak  DebounceController.vhd  DelaySynchroniser.vhd  Divider.vhd  DmaOffloadController.vhd  DmaTriggerControl.vhd  FeedbackControl.vhd  Fifo.vhdl  FifoController.vhd  FifoCtrl.vhd  FifoStateMachine.vhd  FifoStateMachine.vhd.bak  I2C_64K.stp  I2C_Controller.vhd  I2cController.vhd  I2cStateMachine.vhd  I2cStateMachine.vhd.bak  ImpulseGenerator.vhd  Interrupt.vhd  InterruptController.vhd  InterruptGenerator.vhd  InterruptPulse.vhd  InterruptVectorController.vhd  MemoryControler.vhd  NetworkAnalyser.sdc  NetworkAnalyser.sdc.bak  NetworkAnalyser.vhd  NetworkAnalyser.vhd.bak  NoiseController.vhd  OffloadController.vhd  OffloadController.vhd.bak  OffloadController.vhd_OLD  Platform.sdc  Platform.sdc.bak  Platform.sdc_OLD  Platform.vhd  (+57 more)
ultra96/: boot  (+5 more)
(+4484 files in other folders)
